# loxvihgen

./: .gitignore  JsonToLoxoneViHttp.py  LICENSE  README.md  VI_shelly_plug_az.xml  foo.py  input.json  loxvihgen.py  output.xml  pyproject.toml  requirements-dev.txt  units.json
examples/: VI_demo_make_uom.xml  VI_openweathermap.org_onecallapi.xml  VI_shelly_plug_az.xml  demo_make_uom-units.json  shelly_plug.response.json  shelly_plug.rules.json  shelly_plug.vih.json  shelly_plug_az.json
examples/demo_make_uom/: demo_make_uom-units.json
examples/openweathermap.org/: openweathermap.org_onecallapi.rules.json  openweathermap.org_onecallapi.vih.json
examples/shelly_getstatus/: sgs.response.json  sgs.rules.json  sgs.vih.json
examples/shelly_plug/: VI_shelly_plug.xml
loxvihgen/: __init__.py  builders.py  cli.py  core.py  manifest.py  renderer.py  rules.py  service.py  sources.py
tests/: test_builders.py  test_core.py  test_rules_and_render.py  test_rules_skeleton.py
